# zomi-server

./: .gitignore  README.md  SECURITY.md  pyproject.toml
configs/: example_secrets.yml  example_server.yml
configs/fail2ban/: README.md
configs/fail2ban/action.d/: gotify.conf
configs/fail2ban/filter.d/: zomi-server.conf
configs/fail2ban/jail.d/: zomi-server.conf
configs/logrotate/: zomi-server
configs/systemd/: mlapi.service
docker/: README.md  orig.Dockerfile
docker/scripts/: get_opencv.sh
docs/: README.md  config_file.md  install.md  user_management.md  workflow.md
docs/Config/: README.md  color.md  locks.md  logging.md  models.md  server.md  substitutions.md  system.md  uvicorn.md
docs/Config/Frameworks/: README.md  alpr.md  coral.md  face_recognition.md  http.md  opencv.md  ort.md  torch.md  trt.md
docs/Config/Frameworks/alpr/: localalpr.md  plate_recognizer.md
docs/hardware/: README.md  edge_tpu.md  face_recognition.md  open_alpr_cuda.md  opencv_cuda.md  tensor_rt.md
examples/: deepface-train.py  install.py  mlapi.py
src/zomi_server/: __init__.py  app.py  auth.py  utils.py
src/zomi_server/Log/: __init__.py  handlers.py
src/zomi_server/ML/Detectors/: alpr.py  aws_rekognition.py  color_detector.py  coral_edgetpu.py  deep-face.py  face_recognition.py  netint.py  ocr.py  onnx_runtime.py
src/zomi_server/ML/Detectors/opencv/: cv_base.py  cv_darknet.py  cv_hog.py  onnx.py
src/zomi_server/ML/Detectors/process_output/: yolo_nas.py  yolov10.py  yolov8.py
src/zomi_server/ML/Detectors/tensorrt/: trt_base.py  trt_torch.py
src/zomi_server/ML/Detectors/torch/: torch_base.py
src/zomi_server/ML/Labels/: coco-91.py
src/zomi_server/Models/: DEFAULTS.py  Enums.py  config.py  validators.py
