[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.2"]
build-backend = "setuptools.build_meta"


[project]
name = "zomi-server"
version = "0.0.1a5"
dependencies = [
    "requests>=2.31.0",
    "tinydb>=4.8.0",
    'cryptography>=41.0.0',
    'webcolors>=1.13',
    'scikit-learn>=1.2.2',
    'PyYAML>=6.0',
    "pydantic>=2.0.3",
    "pydantic-settings>=2.0.2",
    'uvloop>=0.16.0',
    'uvicorn>=0.19.0',
    'fastapi>=0.86.0',
    'passlib>=1.7.4',
#    'Pillow>=9.3.0',
    'python-jose>=3.3.0',
    'python-Levenshtein>=0.23.0',
    "python-multipart>=0.0.6",
    "requests",
]

authors = [
  { name="baudneo", email="baudneo@protonmail.com" },
]
readme = "README.md"

requires-python = ">=3.8"
keywords = ["object_detection", "machine_learning", "facial_recognition", "ALPR"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[project.urls]
"Repository" = "https://github.com/baudneo/zomi-server"
"Bug Tracker" = "https://github.com/baudneo/zomi-server/issues"


[project.optional-dependencies]
# needed fo runtime
trt = [
    "tensorrt~=8.6.1.post1",
    "cuda-python~=12.3.0"
]


[tool.setuptools.packages.find]
## All the following settings are optional:
where = ["src"]  # ["."] by default
#include = ["zomi_server"]  # ["*"] by default
exclude = ["examples*", "configs*", "docker*"]  # empty by default
#namespaces = false  # true by default

